--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,5 @@
 <h1>Sample App</h1>
 <p>
   This is the home page for the
-  <%= link_to "Ruby on Rails Tutorial", Settings.links.rails_tutorial.home_page %>.
+  <%= link_to "Ruby on Rails Tutorial", Settings.links.rails_tutorial.home_page %>
 </p>
