--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
   </head>
 
   <body>
+  <%= render "layouts/header"%>
+
+  <div class="container">
     <%= yield %>
+  </div>
+
   </body>
 </html>
-
