--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,18 +4,18 @@
       <%= link_to "sample app", "#", id: "logo" %>
       <nav>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to t("global.home"), root_path %></li>
-        <li><%= link_to t("global.help"), help_path %></li>
+          <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Help", help_path %></li>
           <% if logged_in? %>
-            <li><%= link_to "User", user_path(id: current_user.id) %></li>
+            <li><%= link_to "User", users_path %></li>
             <li class="dropdown">
-            <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
+            <%= link_to "#", {class: "dropdown-toggle", data: {"toggle" => "dropdown"}} do %>
               <%= "account" %>
               <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", user_path(id: current_user.id) %></li>
-              <li><%= link_to "Settings", "#" %></li>
+              <li><%= link_to "Profile", users_path %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li><%= link_to "Log Out", logout_path, method: :delete %></li>
             </ul>
